--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=SpringDataRest
 spring.h2.console.enabled=true
 spring.sql.init.platform=h2
 spring.datasource.url=jdbc:h2:mem:testbd
+server.port=8081
