--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=SpringDataRest
-spring.h2.console.enabled=true
-spring.sql.init.platform=h2
-spring.datasource.url=jdbc:h2:mem:testbd
+#spring.h2.console.enabled=true
+#spring.sql.init.platform=h2
+#spring.datasource.url=jdbc:h2:mem:testbd
 server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.data.rest.base-path=/api
