--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.data.rest.base-path=/api
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+
+spring.security.oauth2.client.registration.google.client-id=855594615952-8hakd146requ0es5gcd5jihkvkcce5b8.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
