add variable envirement #3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=SpringDataRest
 #spring.sql.init.platform=h2
 #spring.datasource.url=jdbc:h2:mem:testbd
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -13,5 +13,5 @@ spring.data.rest.base-path=/api
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
-spring.security.oauth2.client.registration.google.client-id=855594615952-8hakd146requ0es5gcd5jihkvkcce5b8.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
