--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,15 @@ spring.application.name=SpringDataRest
 #spring.sql.init.platform=h2
 #spring.datasource.url=jdbc:h2:mem:testbd
 server.port=8081
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5433}/springboot
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:admin}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.data.rest.base-path=/api
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
-spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=855594615952-8hakd146requ0es5gcd5jihkvkcce5b8.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
