--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,10 @@ management.endpoint.health.show-details=always
 management.endpoints.jmx.exposure.include=*
 management.metrics.data.repository.autotime.enabled=true
 
-spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=855594615952-8hakd146requ0es5gcd5jihkvkcce5b8.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
+app.datasource.password=1234
+
+rsa.public-key=classpath:certs/public.pem
+rsa.private-key=classpath:certs/private.pem
